--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,9 +11,9 @@ on:
     branches:
       - 'master'
       - 'release-*'
-env:
-  OP_IMAGE: kubesphere/notification-manager-operator:latest
-  NM_IMAGE: kubesphere/notification-manager:latest
+# env:
+#   OP_IMAGE: kubesphere/notification-manager-operator:latest
+#   NM_IMAGE: kubesphere/notification-manager:latest
 
 jobs:
   test:
@@ -26,7 +26,7 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.17.x
+          go-version: 1.18.x
 
       - uses: actions/cache@v2
         with:
@@ -57,7 +57,7 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.17.x
+          go-version: 1.18.x
 
       - uses: actions/cache@v2
         with:
@@ -72,89 +72,89 @@ jobs:
       - run: make binary
         name: Run build all binaries
        
-  docker_build_and_helm_deployment:
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    name: Docker image build, install and uninstall by helm
-    steps:
-      - name: Install Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.17.x
+  # docker_build_and_helm_deployment:
+  #   runs-on: ubuntu-latest
+  #   timeout-minutes: 30
+  #   name: Docker image build, install and uninstall by helm
+  #   steps:
+  #     - name: Install Go
+  #       uses: actions/setup-go@v2
+  #       with:
+  #         go-version: 1.17.x
 
-      - uses: actions/cache@v2
-        with:
-          path: ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+  #     - uses: actions/cache@v2
+  #       with:
+  #         path: ~/go/pkg/mod
+  #         key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
 
-      - name: Checkout code
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+  #     - name: Checkout code
+  #       uses: actions/checkout@v2
+  #       with:
+  #         fetch-depth: 0
 
-      - name: build image
-        run: |
-          docker build . -t ${{ env.OP_IMAGE }} -f cmd/operator/Dockerfile --build-arg GOPROXY="https://proxy.golang.org"
-          docker build . -t ${{ env.NM_IMAGE }} -f cmd/notification-manager/Dockerfile --build-arg GOPROXY="https://proxy.golang.org"
+  #     - name: build image
+  #       run: |
+  #         docker build . -t ${{ env.OP_IMAGE }} -f cmd/operator/Dockerfile --build-arg GOPROXY="https://proxy.golang.org"
+  #         docker build . -t ${{ env.NM_IMAGE }} -f cmd/notification-manager/Dockerfile --build-arg GOPROXY="https://proxy.golang.org"
 
-      - name: Set up Helm
-        uses: azure/setup-helm@v1
-        with:
-          version: v3.4.0
+  #     - name: Set up Helm
+  #       uses: azure/setup-helm@v1
+  #       with:
+  #         version: v3.4.0
 
-      - name: Create kind cluster
-        uses: helm/kind-action@v1.2.0
-        with:
-          config: .github/workflows/kind/kind.yaml
+  #     - name: Create kind cluster
+  #       uses: helm/kind-action@v1.2.0
+  #       with:
+  #         config: .github/workflows/kind/kind.yaml
 
-      - name: Setting up notification manager
-        run: |
-          kubectl create ns kubesphere-monitoring-system
-          helm install notification-manager ./helm -n kubesphere-monitoring-system --set "operator.containers.operator.image.tag=latest" --set "notificationmanager.image.tag=latest"
+  #     - name: Setting up notification manager
+  #       run: |
+  #         kubectl create ns kubesphere-monitoring-system
+  #         helm install notification-manager ./helm -n kubesphere-monitoring-system --set "operator.containers.operator.image.tag=latest" --set "notificationmanager.image.tag=latest"
 
-      - name: Waiting for 60 seconds to keep the notification manager installed
-        uses: jakejarvis/wait-action@master
-        with:
-          time: '60s'
+  #     - name: Waiting for 60 seconds to keep the notification manager installed
+  #       uses: jakejarvis/wait-action@master
+  #       with:
+  #         time: '60s'
 
-      - name: Check the related resources
-        run: |
-          echo "list release:"
-          echo "-----"
-          helm list -n kubesphere-monitoring-system
-          echo "-----"
+  #     - name: Check the related resources
+  #       run: |
+  #         echo "list release:"
+  #         echo "-----"
+  #         helm list -n kubesphere-monitoring-system
+  #         echo "-----"
 
-          echo "list pods:"
-          echo "-----"
-          kubectl get pods -n kubesphere-monitoring-system
-          echo "-----"
+  #         echo "list pods:"
+  #         echo "-----"
+  #         kubectl get pods -n kubesphere-monitoring-system
+  #         echo "-----"
       
-      - name: Deploy the default SlackConfig and global SlackReceiver if the slack secret is set
-        run: |
-          if [ '${{ secrets.SLACK_SECRET }}' != '' ] ; then
-              cat config/ci/slack-pr.yaml | sed -e 's/SLACK_SECRET/${{ secrets.SLACK_SECRET }}/g' | kubectl apply -f -
-          else
-              echo "No Slack secret is set, skipped..."
-          fi
+  #     - name: Deploy the default SlackConfig and global SlackReceiver if the slack secret is set
+  #       run: |
+  #         if [ '${{ secrets.SLACK_SECRET }}' != '' ] ; then
+  #             cat config/ci/slack-pr.yaml | sed -e 's/SLACK_SECRET/${{ secrets.SLACK_SECRET }}/g' | kubectl apply -f -
+  #         else
+  #             echo "No Slack secret is set, skipped..."
+  #         fi
 
-      - name: Expose service port as nodeport
-        run: |
-          kubectl -n kubesphere-monitoring-system patch svc notification-manager-svc --type='json' -p '[{"op":"replace","path":"/spec/type","value":"NodePort"},{"op":"replace","path":"/spec/ports/0/nodePort","value":30008}]'
+  #     - name: Expose service port as nodeport
+  #       run: |
+  #         kubectl -n kubesphere-monitoring-system patch svc notification-manager-svc --type='json' -p '[{"op":"replace","path":"/spec/type","value":"NodePort"},{"op":"replace","path":"/spec/ports/0/nodePort","value":30008}]'
 
-      - name: Send alerts
-        run: | 
-          NODE_IP=$(kubectl get nodes -o jsonpath={.items[0].status.addresses[0].address})
-          curl -XPOST -d @./config/ci/alerts.json "http://$NODE_IP:30008/api/v2/alerts" --connect-timeout 30
+  #     - name: Send alerts
+  #       run: | 
+  #         NODE_IP=$(kubectl get nodes -o jsonpath={.items[0].status.addresses[0].address})
+  #         curl -XPOST -d @./config/ci/alerts.json "http://$NODE_IP:30008/api/v2/alerts" --connect-timeout 30
 
-      - name: Waiting for 2 seconds
-        uses: jakejarvis/wait-action@master
-        with:
-          time: '2s'
+  #     - name: Waiting for 2 seconds
+  #       uses: jakejarvis/wait-action@master
+  #       with:
+  #         time: '2s'
 
-      - name: Check the related logs
-        run: |
-          kubectl -n kubesphere-monitoring-system logs -l app=notification-manager | grep -i "error" || true
+  #     - name: Check the related logs
+  #       run: |
+  #         kubectl -n kubesphere-monitoring-system logs -l app=notification-manager | grep -i "error" || true
         
-      - name: Uninstall notification manager
-        run: |
-          helm uninstall notification-manager -n kubesphere-monitoring-system
+  #     - name: Uninstall notification manager
+  #       run: |
+  #         helm uninstall notification-manager -n kubesphere-monitoring-system
