--- a/.github/workflows/push-nm-image.yaml
+++ b/.github/workflows/push-nm-image.yaml
@@ -30,7 +30,7 @@ on:
       - 'go.sum'
 
 env:
-  REPO_NM: 'kubesphere'
+  REPO_NM: 'bytetrade'
 
 jobs:
   build:
@@ -41,7 +41,7 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.16.x
+          go-version: 1.18.x
 
       - uses: actions/cache@v2
         with:
@@ -63,8 +63,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.REGISTRY_USER }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Set up Docker Buildx
         id: buildx
@@ -73,4 +73,4 @@ jobs:
       - name: Build and Push image
         run: |
           tag=$(cat VERSION | tr -d " \t\n\r")
-          make build-nm -e NM_IMG=${{ env.REPO_NM }}/notification-manager:$tag
+          make build-nm -e NM_IMG=${{ env.REPO_NM }}/notification-manager-ext:$tag
