--- a/.github/workflows/push-operator-image.yaml
+++ b/.github/workflows/push-operator-image.yaml
@@ -31,7 +31,7 @@ on:
       - 'go.mod'
 
 env:
-  REPO_OP: 'kubesphere'
+  REPO_OP: 'bytetrade'
 
 jobs:
   build:
@@ -42,7 +42,7 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.16.x
+          go-version: 1.18.x
 
       - uses: actions/cache@v2
         with:
@@ -64,8 +64,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.REGISTRY_USER }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Set up Docker Buildx
         id: buildx
@@ -74,4 +74,4 @@ jobs:
       - name: Build and Push image
         run: |
           tag=$(cat VERSION | tr -d " \t\n\r")
-          make build-op -e IMG=${{ env.REPO_OP }}/notification-manager-operator:$tag
+          make build-op -e IMG=${{ env.REPO_OP }}/notification-manager-operator-ext:$tag
