--- a/.github/workflows/publish_sidecar.yaml
+++ b/.github/workflows/publish_sidecar.yaml
@@ -25,4 +25,4 @@ jobs:
                   context: ./sidecar/bytetrade
                   push: true
                   tags: bytetrade/notification-tenant-sidecar:${{ github.event.inputs.tags }}
-                  file: Dockerfile
+                  file: ./sidecar/bytetrade/Dockerfile
