--- a/cmd/notification-manager/Dockerfile
+++ b/cmd/notification-manager/Dockerfile
@@ -10,7 +10,7 @@ COPY go.sum go.sum
 
 # cache deps before building and copying source so that we don't need to re-download as much
 # and so that source changes don't invalidate our downloaded layer
-RUN GOPROXY=$GOPROXY go mod download
+RUN go mod download
 
 # Copy the go source
 COPY cmd/notification-manager/main.go main.go
