--- a/cmd/operator/Dockerfile
+++ b/cmd/operator/Dockerfile
@@ -10,7 +10,7 @@ COPY go.sum go.sum
 
 # cache deps before building and copying source so that we don't need to re-download as much
 # and so that source changes don't invalidate our downloaded layer
-RUN GOPROXY=$GOPROXY go mod download
+RUN go mod download
 
 # Copy the go source
 COPY cmd/operator/main.go main.go
@@ -18,7 +18,7 @@ COPY controllers/ controllers/
 COPY pkg/ pkg/
 
 # Build
-RUN GOPROXY=$GOPROXY CGO_ENABLED=0 GO111MODULE=on go build -a -o notification-manager-operator main.go
+RUN CGO_ENABLED=0 GO111MODULE=on go build -a -o notification-manager-operator main.go
 
 # Use distroless as minimal base image to package the manager binary
 # Refer to https://github.com/GoogleContainerTools/distroless for more details
