--- a/.github/workflows/push-operator-image.yaml
+++ b/.github/workflows/push-operator-image.yaml
@@ -45,6 +45,10 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: get latest tag
+        uses: actions-ecosystem/action-get-latest-tag@v1
+        id: get-latest-tag
+
       - name: Set up QEMU
         id: qemu
         uses: docker/setup-qemu-action@v1
@@ -64,5 +68,4 @@ jobs:
 
       - name: Build and Push image
         run: |
-          tag=$(cat VERSION | tr -d " \t\n\r")
-          make build-op -e IMG=${{ env.REPO_OP }}/notification-manager-operator-ext:$tag
+          make build-op -e IMG=${{ env.REPO_OP }}/notification-manager-operator-ext:${{ steps.get-latest-tag.outputs.tag }}
