--- a/.github/workflows/publish_sidecar.yaml
+++ b/.github/workflows/publish_sidecar.yaml
@@ -13,6 +13,13 @@ jobs:
             - name: Check out the repo
               uses: actions/checkout@v3
 
+            - name: Set up QEMU
+              uses: docker/setup-qemu-action@v3
+    
+            - name: Set up Docker Buildx
+              id: buildx
+              uses: docker/setup-buildx-action@v3
+
             - name: Log in to Docker Hub
               uses: docker/login-action@v2
               with:
@@ -26,3 +33,4 @@ jobs:
                   push: true
                   tags: beclab/notification-tenant-sidecar:${{ github.event.inputs.tags }}
                   file: ./sidecar/bytetrade/Dockerfile
+                  platforms: linux/amd64,linux/arm64
